fix search svg overflowing

--- a/src/styles/Body.css
+++ b/src/styles/Body.css
@@ -76,7 +76,7 @@ form{
     flex-direction: row;
     align-items: center;
     background-color: white;
-    width: 45vw;
+    width: 52vw;
     
 }
 
